syntax = "proto2";

package proto;

option go_package = "./;walletpb";

message CreateWalletRequest {}

message WalletBaseResponse {
  required string blockchain_address    = 1;
}

message WalletGetResponse {
  required string blockchain_address    = 1;
  required double value                 = 2;
}
